# SOLE_solver

./: CMakeLists.txt  README.md
include/: linear_algebra_system.hpp
src/: main.cpp
